Closed Bug 1822608 Opened 2 years ago Closed 2 years ago

about:memory diff should clear the PID for utility processes

Categories

(Toolkit :: about:memory, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox111 --- wontfix
firefox112 --- wontfix
firefox113 --- fixed

People

(Reporter: mccr8, Assigned: mccr8)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

In an about:memory report, the utility process shows up like this:
Utility (pid: 4216, sandboxingKind: 1)

For whatever reason, the about:memory diff fails to wipe the PID. It should be turned into
Utility (pid: NNN, sandboxingKind: 1)

like the other processes. The sandboxingKind looks like something that will be stable across different runs, so I think we want to keep it.

Presumably there's some regexp that needs to be adjusted in about:memory

Assignee: nobody → continuation

sandboxingKind depends on the sandbox applied, so it might be different values

(In reply to Alexandre LISSY :gerard-majax from comment #1)

sandboxingKind depends on the sandbox applied, so it might be different values

Right, but my guess is that if you load a certain set of pages in two different browser sessions, the sandboxing kind would be stable across runs for a given process, while the PID won't be.

if it's the same set of pages, yes

Severity: -- → S3
Type: task → defect
Keywords: regression
Regressed by: 1753424

Utility processes have their pid like "pid: 12345", so change the regexp to match it.
This pidRegex is used to normalize PIDs in diffs. We need this change even if the format
gets changed so that it'll work on older versions.

Other processes print their pid like (pid 12345), so change utility processes to be consistent.

Pushed by amccreight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/446f0ae768fc Change aboutMemory pidRegex to match when there's a colon. r=gerard-majax https://hg.mozilla.org/integration/autoland/rev/5da77534d25a Make PIDs for utility processes consistent with other processes. r=gerard-majax
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: