Bug 1822608 - Make PIDs for utility processes consistent with other processes. r=gerard-majax

Other processes print their pid like (pid 12345), so change utility processes to be consistent.

Differential Revision: https://phabricator.services.mozilla.com/D172744